# DRaT-API

gr-drat/: .gitignore  CMakeLists.txt  MANIFEST.md
gr-drat/.conda/: README.md
gr-drat/.conda/recipe/: meta.yaml
gr-drat/apps/: CMakeLists.txt
gr-drat/cmake/Modules/: gnuradio-dratConfig.cmake
gr-drat/docs/: CMakeLists.txt  README.drat
gr-drat/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-drat/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-drat/examples/: loopback.grc  loopback_burst.grc  loopback_burst_tx_time.grc  loopback_self_clocked.grc  loopback_tagged_stream.grc  sign_magnitude.grc
gr-drat/grc/: CMakeLists.txt  drat_convert_from_signmag.block.yml  drat_convert_to_signmag.block.yml  drat_time_source.block.yml  drat_udp_sink.block.yml  drat_udp_source.block.yml
gr-drat/lib/: CMakeLists.txt  cmake_endian.h.in  convert_from_signmag_impl.cc  convert_from_signmag_impl.h  convert_to_signmag_impl.cc  convert_to_signmag_impl.h  drat.h  udp_sink_impl.cc  udp_sink_impl.h  udp_source_impl.cc  udp_source_impl.h
gr-drat/python/drat/: CMakeLists.txt  __init__.py  qa_convert_from_signmag.py  qa_convert_to_signmag.py  qa_udp_sink.py  qa_udp_source.py  time_source.py
gr-drat/python/drat/bindings/: CMakeLists.txt  bind_oot_file.py  convert_from_signmag_python.cc  convert_to_signmag_python.cc  header_utils.py  python_bindings.cc  udp_sink_python.cc  udp_source_python.cc
gr-drat/python/drat/bindings/docstrings/: convert_from_signmag_pydoc_template.h  convert_to_signmag_pydoc_template.h  udp_sink_pydoc_template.h  udp_source_pydoc_template.h
(+8 files in other folders)
